<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/secondary">

    <androidx.cardview.widget.CardView
        android:id="@+id/phonePreviewCardView"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/phonePreviewImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/phone_preview"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/brandTextView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/mark_pro_medium"
        android:lineSpacingExtra="4dp"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintStart_toEndOf="@+id/phonePreviewCardView"
        app:layout_constraintTop_toTopOf="@+id/phonePreviewCardView"
        tools:text="Galaxy Note 20 Ultra" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/mark_pro_medium"
        android:textColor="@color/primary"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@+id/brandTextView"
        app:layout_constraintTop_toBottomOf="@+id/brandTextView"
        tools:text="$3000.00" />

    <androidx.cardview.widget.CardView
        android:id="@+id/itemCountCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/item_count_card_view_color"
        app:cardCornerRadius="26dp"
        app:layout_constraintBottom_toBottomOf="@+id/priceTextView"
        app:layout_constraintStart_toEndOf="@+id/brandTextView"
        app:layout_constraintTop_toTopOf="@+id/brandTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/minus_icon"
                android:src="@drawable/ic_minus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:fontFamily="@font/mark_pro_medium"
                android:text="@string/default_item_count"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/plus_icon"
                android:src="@drawable/ic_plus" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/trash_icon"
        android:src="@drawable/ic_trash"
        app:layout_constraintBottom_toBottomOf="@+id/itemCountCardView"
        app:layout_constraintStart_toEndOf="@+id/itemCountCardView"
        app:layout_constraintTop_toTopOf="@+id/itemCountCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>